--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">My Application3</string>
-    <string name="tab_text_1">All Worker</string>
-    <string name="tab_text_2">Location</string>
-    <string name="tab_text_3">Machine</string>
+    <string name="app_name">defendo</string>
+    <string name="tab_text_1">직원관리</string>
+    <string name="tab_text_2">직원위치현황</string>
+    <string name="tab_text_3">기기등록</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
